[gd_scene load_steps=16 format=3 uid="uid://bqn8hvhuttrit"]

[ext_resource type="Script" path="res://Kitchen/cookingMinigame/cookingGame.gd" id="1_r3p4k"]
[ext_resource type="Texture2D" uid="uid://ctnllgja4o5jj" path="res://Kitchen/cookingMinigame/Board.png" id="1_r88wp"]
[ext_resource type="Texture2D" uid="uid://c85gtarw23gvs" path="res://Kitchen/cookingMinigame/tomato.png" id="2_061ni"]
[ext_resource type="Script" path="res://Kitchen/cookingMinigame/ingredients.gd" id="3_5acuq"]
[ext_resource type="Script" path="res://Kitchen/cookingMinigame/MenuButton.gd" id="3_64215"]
[ext_resource type="Texture2D" uid="uid://dhjq7kp7e7f6w" path="res://Kitchen/cookingMinigame/pumpkin.png" id="3_y310p"]
[ext_resource type="Texture2D" uid="uid://bpeucxlyeoc60" path="res://Kitchen/cookingMinigame/corn.png" id="4_rxon7"]
[ext_resource type="Texture2D" uid="uid://b8n508syf2hcy" path="res://Kitchen/cookingMinigame/onion.png" id="5_ql4bt"]
[ext_resource type="Texture2D" uid="uid://dyn83vc2cmvvi" path="res://Kitchen/cookingMinigame/Knife.png" id="6_hgi70"]
[ext_resource type="Texture2D" uid="uid://xyauyssr7fib" path="res://Images and Vectors/Exit Icon (1).png" id="9_xqn2u"]
[ext_resource type="Texture2D" uid="uid://dohjhw6s1cvnm" path="res://Kitchen/cookingMinigame/playButton.bmp" id="11_nw5q4"]
[ext_resource type="Script" path="res://Kitchen/cookingMinigame/startGame.gd" id="12_w5c01"]
[ext_resource type="Theme" uid="uid://cssfqltobv5if" path="res://Cat Shop/Exit Button.tres" id="13_tw4mc"]
[ext_resource type="Script" path="res://Cat Shop/Exit Button.gd" id="14_a7o8u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6pbx4"]
radius = 268.39

[node name="cookingGame" type="Node2D"]
script = ExtResource("1_r3p4k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 650.0

[node name="CuttingBoard" type="Sprite2D" parent="."]
position = Vector2(609, 391)
scale = Vector2(0.100083, 0.155253)
texture = ExtResource("1_r88wp")

[node name="Knife" type="Sprite2D" parent="."]
position = Vector2(785, 526)
rotation = -0.625598
scale = Vector2(0.635, 0.860544)
texture = ExtResource("6_hgi70")

[node name="MenuButton" type="Button" parent="."]
offset_left = 106.0
offset_top = 536.0
offset_right = 241.0
offset_bottom = 589.0
action_mode = 0
text = "Ingredients"
script = ExtResource("3_64215")

[node name="Corn" type="Sprite2D" parent="."]
visible = false
position = Vector2(657, 321)
rotation = -1.38878
scale = Vector2(0.243887, 0.29625)
texture = ExtResource("4_rxon7")

[node name="tomato" type="Sprite2D" parent="."]
visible = false
position = Vector2(412, 340)
scale = Vector2(0.191935, 0.180716)
texture = ExtResource("2_061ni")

[node name="Cucumber" type="Sprite2D" parent="."]
visible = false
position = Vector2(500, 368)
rotation = -0.614875
scale = Vector2(0.243216, 0.189375)
texture = ExtResource("3_y310p")

[node name="Onion" type="Sprite2D" parent="."]
visible = false
position = Vector2(595, 419)
rotation = 0.617571
scale = Vector2(0.228458, 0.224375)
texture = ExtResource("5_ql4bt")

[node name="IngredientMenu" type="ColorRect" parent="."]
visible = false
offset_left = 54.0
offset_top = 25.0
offset_right = 472.0
offset_bottom = 246.0
color = Color(0.870588, 0.654902, 0.439216, 1)
script = ExtResource("3_5acuq")

[node name="CornButton" type="Button" parent="IngredientMenu"]
layout_mode = 0
offset_left = 253.0
offset_right = 335.0
offset_bottom = 72.0
action_mode = 0
text = "Corn"

[node name="TomButton" type="Button" parent="IngredientMenu"]
layout_mode = 0
offset_right = 82.0
offset_bottom = 72.0
action_mode = 0
text = "Tomato"

[node name="CucButton" type="Button" parent="IngredientMenu"]
layout_mode = 0
offset_left = 83.0
offset_right = 167.0
offset_bottom = 72.0
action_mode = 0
text = "Zuccini"

[node name="OnionButton" type="Button" parent="IngredientMenu"]
layout_mode = 0
offset_left = 168.0
offset_top = 1.0
offset_right = 251.0
offset_bottom = 72.0
action_mode = 0
text = "Onion"

[node name="ExitButton" type="Button" parent="IngredientMenu"]
layout_mode = 0
offset_left = 355.0
offset_top = 8.0
offset_right = 407.0
offset_bottom = 60.0
action_mode = 0
icon = ExtResource("9_xqn2u")
icon_alignment = 1

[node name="PlayButton" type="TouchScreenButton" parent="."]
position = Vector2(484, 48)
scale = Vector2(0.244141, 0.250977)
texture_normal = ExtResource("11_nw5q4")
shape = SubResource("CircleShape2D_6pbx4")
script = ExtResource("12_w5c01")

[node name="Label" type="Label" parent="PlayButton"]
self_modulate = Color(0, 0, 0, 1)
offset_left = 73.728
offset_top = 545.868
offset_right = 431.728
offset_bottom = 713.868
theme_override_font_sizes/font_size = 120
text = "START"

[node name="Exit Button" type="Button" parent="."]
offset_left = 1077.0
offset_top = 22.0
offset_right = 1124.0
offset_bottom = 69.0
theme = ExtResource("13_tw4mc")
script = ExtResource("14_a7o8u")

[connection signal="pressed" from="MenuButton" to="MenuButton" method="_on_pressed"]
[connection signal="pressed" from="IngredientMenu/CornButton" to="." method="_on_corn_button_pressed"]
[connection signal="pressed" from="IngredientMenu/CornButton" to="IngredientMenu" method="_on_corn_button_pressed"]
[connection signal="pressed" from="IngredientMenu/CornButton" to="IngredientMenu/CornButton" method="_on_pressed"]
[connection signal="pressed" from="IngredientMenu/TomButton" to="." method="_on_tom_button_pressed"]
[connection signal="pressed" from="IngredientMenu/TomButton" to="IngredientMenu" method="_on_tom_button_pressed"]
[connection signal="pressed" from="IngredientMenu/TomButton" to="IngredientMenu/CornButton" method="_on_tom_button_pressed"]
[connection signal="pressed" from="IngredientMenu/CucButton" to="." method="_on_cuc_button_pressed"]
[connection signal="pressed" from="IngredientMenu/CucButton" to="IngredientMenu" method="_on_zucc_button_pressed"]
[connection signal="pressed" from="IngredientMenu/OnionButton" to="." method="_on_onion_button_pressed"]
[connection signal="pressed" from="IngredientMenu/OnionButton" to="IngredientMenu" method="_on_onion_button_pressed"]
[connection signal="pressed" from="IngredientMenu/ExitButton" to="IngredientMenu" method="_on_exit_button_pressed"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
[connection signal="pressed" from="Exit Button" to="Exit Button" method="_on_pressed"]
